Dummy_Package_for_scratch_org/main/default/objects/Build_Task__c/fields/Continuous_Integration__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Integration__c</fullName>
    <label>Continuous Integration</label>
    <referenceTo>Continuous_Integration__c</referenceTo>
    <relationshipLabel>Build Tasks</relationshipLabel>
    <relationshipName>Build_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>