Dummy_Package_for_scratch_org/main/default/objects/Build_Task__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Build Tasks</relationshipLabel>
    <relationshipName>Build_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>