Dummy_Package_for_scratch_org/main/default/objects/Build_Task__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>